--- a/backend/america-news-server/Cargo.toml
+++ b/backend/america-news-server/Cargo.toml
@@ -7,8 +7,10 @@ edition = "2021"
 
 [dependencies]
 rocket = "0.4.10"
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
 
 [dependencies.rocket_contrib]
 version = "0.4.10"
 default-features = false
-features = ["serve"]
+features = ["serve", "json"]
