--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,6 @@
   "dependencies": {
     "98.css": "^0.1.17",
     "sirv-cli": "^1.0.0",
-    "svelte-routing": "^1.6.0"
+    "svelte-spa-router": "^3.2.0"
   }
 }
